refactor: refatorando o client e employee para USER